--- a/03-admin-todos/.env.template
+++ b/03-admin-todos/.env.template
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+GITHUB_ID=
+GITHUB_SECRET=
+NEXTAUTH_SECRET=
