--- a/03-admin-todos/package.json
+++ b/03-admin-todos/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.19.1",
+    "auth-js": "^0.0.16",
+    "cookies-next": "^4.2.1",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
